--- a/app/views/viewer/_menus.html.erb
+++ b/app/views/viewer/_menus.html.erb
@@ -1,4 +1,3 @@
-
 <ul class="dropdown">
 <!-- Home Page -->
 <li><%= link_to (t 'menu.home'),  root_url %></li>
@@ -20,7 +19,9 @@
 		<li><a href="#"><%= t 'menu.instructor' %> ></a><!-- Staff Leave-->
 		<ul class="sub_menu">
 			<li><%= link_to (t 'menu.instructor'), 	  		{:controller => 'instructors', :action => 'index'} %></li><!--Instructor Appraisal-->
-			<li><%= link_to 'Laporan Penilaian Jurulatih', 	{:controller => 'evaluate_coaches', 	:action => 'report_evaluate_instructor'} %></li>
+			<!--<li><%#= link_to 'Laporan Penilaian Jurulatih', 	{:controller => 'evaluate_coaches', 	:action => 'report_evaluate_instructor'} %></li>--><!--6March2013-already hide from role:quality control but not yet hide from administration role-->
+			<li><%= link_to (t 'menu.instructor_report'), 	{:controller => 'instructors', 	:action => 'report_instructor_appraisal'} %></li><!--6March2013-already hide from role:quality control but not yet hide from administration role-->
+			<li><%= link_to (t 'menu.instructor_average'), 	 {:controller => 'average_instructors', :action => 'index'} %></li><!--6March2013-Evaluation & Average Score Analysis for Instructor-->
 	   	</ul>
 		</li>
 		<% end %>
