--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -14,7 +14,7 @@
     <th>Sent to Quality Control</th>
     <th>Total Scores</th>
 	<th>Checked By</th>
-    <th colspan=3 class="ac">Control</th>
+    <th colspan=5 class="ac">Control</th>
 </tr>
   </tr>
 
@@ -26,10 +26,18 @@
 	<td><%=h instructor.total_mark %></td>
 	<td><%=h instructor.check_qc.blank? ? "-" : instructor.checker.name_for_staff %></td>
     <td width=10px ><%= link_to image_tag("document.png", :border => 0), :action => 'show', :id => instructor %></td>
-    <% if instructor.qcsent == FALSE %><td width=10px><%= link_to image_tag("edit.png", :border => 0), :action => 'edit', :id => instructor %></td>
-    <td width=10px><%= link_to image_tag("delete.png",   :border => 0, :title => 'Delete'), instructor, :confirm => 'Are you sure?', :method => :delete %></td><% end %>
+	<td width=10px>
+    	<% if instructor.qcsent == FALSE %>
+			<%= link_to image_tag("edit.png", :border => 0), :action => 'edit', :id => instructor %>
+		<% end %>
+	</td>
 	<td><%= link_to image_tag("printer.png", :border => 0, :title => 'Borang Penilaian Diri Untuk Jurulatih'), :action => 'appraisal_score', :id => instructor %></td>
 	<% if permitted_to? :manage, @instructor%><td width=10px><%= link_to image_tag("approval.png", :border => 0, :title => 'Approval'), :action => 'qc_checked', :id => instructor %></td><%end%>
+	<td width=10px>
+		<% if instructor.qcsent == FALSE %>
+			<%= link_to image_tag("delete.png",   :border => 0, :title => 'Delete'), instructor, :confirm => 'Are you sure?', :method => :delete %>
+		<% end %>
+	</td>
   </tr>
 <% end %>
 </table>
