--- a/app/views/average_lecturers/_form_display.html.erb
+++ b/app/views/average_lecturers/_form_display.html.erb
@@ -3,17 +3,17 @@
 	<tr>
 		<td  width=20%><label for="short_name">&nbsp;Lecturer Name</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.lecturer_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].lecturer_evaluate %></td>
 	</tr>
 	<tr>
 		<td><label for="short_name">&nbsp;Course Name</label></td>
 		<td>:</td> 
-		<td><%=h @average_lecturer.lecturer.course_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].course_evaluate %></td>
 	</tr>
 	<tr>
 		<td><label for="short_name">&nbsp;Subject Name</label></td>
 		<td>:</td>
-		<td><%=h @average_lecturer.lecturer.subject_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].subject_evaluate %></td>
 	</tr>
 </table>
 
