--- a/app/views/average_lecturers/show.html.erb
+++ b/app/views/average_lecturers/show.html.erb
@@ -5,19 +5,19 @@
 	<tr>
 		<td  width=20%><label for="short_name">&nbsp;Lecturer Name</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.lecturer_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].lecturer_evaluate %></td>
 	</tr>
 	
 	<tr>
 		<td  width=20%><label for="short_name">&nbsp;IC No</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.lecturer_evaluate_icno %></td>
+		<td><%=h @average_lecturer.evaluations[0].lecturer_evaluate_icno %></td>
 	</tr>
 	
 	<tr>
 		<td  width=20%><label for="short_name">&nbsp;Rank/Position</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.lecturer_evaluate_rank %></td>
+		<td><%=h @average_lecturer.evaluations[0].lecturer_evaluate_rank %></td>
 	</tr>
 	
 </table>
@@ -27,20 +27,20 @@
 	<tr>
 		<td  width=20%><label for="short_name">&nbsp;Course Name</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.course_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].course_evaluate %></td>
 	</tr>
 	
 	<tr>
 		<td  width=20%><label for="short_name">&nbsp;Course Type</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.course_type_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].course_type_evaluate %></td>
 	</tr>
 	
 	<!--20Feb2013-subject added-->
 	<tr>
 		<td  width=20%><label for="short_name">&nbsp;Subject</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.subject_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].subject_evaluate %></td>
 	</tr>
 	<!--20Feb2013-subject added-->
 	
@@ -49,8 +49,8 @@
 		<td width=3%><b>:</b></td>
 		<td>
 			<!--20Feb2013-Jumlah pelatih : total student completed appraisal out of total student-->
-			<%= AverageLecturer.find_evaluations(@average_lecturer.lecturer.staff_id,@average_lecturer.subject_id).count %>
-			 / <%=h Student.find(:all, :conditions=>['course_id=?', @average_lecturer.lecturer.course_id]).count %>
+			<%= AverageLecturer.find_evaluations(@average_lecturer.evaluations[0].staff_id,@average_lecturer.subject_id).count %>
+			 / <%=h Student.find(:all, :conditions=>['course_id=?', @average_lecturer.evaluations[0].course_id]).count %>
 			<!--20Feb2013-Jumlah pelatih : total student completed appraisal out of total student-->
 		</td>
 	</tr>
@@ -68,7 +68,7 @@
 	<tr>
 		<td  width=20%><label for="short_name"><font size=2>&nbsp;Lesson Topic</font></label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @average_lecturer.lecturer.subject_evaluate %></td>
+		<td><%=h @average_lecturer.evaluations[0].subject_evaluate %></td>
 	</tr>
 	
 	<tr>
@@ -96,7 +96,7 @@
 				<% elsif counter==7 %>Kesesuaian kerja sindikit dengan objektif pelajaran
 				<% elsif counter==8 %>Faedah bahan/nota yang diedarkan
 				<% end %>
-				<% @purata = AverageLecturer.find_average(@average_lecturer.lecturer.staff_id,@average_lecturer.subject_id,counter)%>
+				<% @purata = AverageLecturer.find_average(@average_lecturer.evaluations[0].staff_id,@average_lecturer.subject_id,counter)%>
 			</td>
 			<td align="center"><% if @purata == 1  %><b><%= @purata %></b><% else %><font color="#A0A0A0">1</font><% end %></td>
 			<td align="center"><% if @purata == 2  %><b><%= @purata %></b<% else %><font color="#A0A0A0">2</font><% end %></td>	
