--- a/app/views/viewer/_menus.html.erb
+++ b/app/views/viewer/_menus.html.erb
@@ -172,7 +172,7 @@
 					<li><a href="#">Lecturer Appraisals ></a>
 						<ul class="sub_menu">
 								<li><%= link_to (t 'menu.lecturer'), {:controller => 'evaluate_lecturers', :action => 'index'} %></li><!-- Lecturer Appraisal-->
-								<li><%= link_to 'Analisa Skor Purata Penilaian Pensyarah', {:controller => 'average_lecturers', :action => 'index'} %></li>
+								<li><%= link_to (t 'menu.averagelecturer'), {:controller => 'average_lecturers', :action => 'index'} %></li>
 						</ul>
 					</li>
 			<% end %>
