Fixed dependent-destroy for books-accessions relationship & fixed 'duration for topic' in Topic/Lesson Plan (New/Edit/Show) pages

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,5 @@
 <div class="tform">
-<H2>Topic Topic</H2>
+<H2>Topic</H2>
 <table width=100%>
 	
 	<tr>
@@ -31,7 +31,7 @@
 	<tr>
 		<td class="leftcol"><label for="duration">Duration For Topic</label></td>
 		<td><b>:</b></td>
-		<td>0<%=h @topic.durahours %>:<%=h @topic.duramins %> Hours</td>
+		<td><%=h @topic.duramins %> Minutes</td>
 	</tr>
 </table>
 <H2>Training Plan Details</H2>
