--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -25,10 +25,10 @@
 	<tr>
 		<td class="leftcol"><label for="duration">Duration for Topic</label></td>
 		<td><b>:</b></td>
-		<td><%= f.select :durahours, options_for_select(['00','01','02','03'], @topic.durahours) %>:
+		<td><%#= f.select :durahours, options_for_select(['00','01','02','03'], @topic.durahours) %>:
 		    <%= f.select :duramins, options_for_select(['00','15','30','45'], @topic.duramins) %>
-		&nbsp;(Hours:Minutes)
-		    <font color=#AAA size=-2>Hours:Minutes</font><%#= f.time_select :durahours,:minute_step => 15 %></td>
+		&nbsp;
+		    <font color=#AAA size=-2>Minutes</font><%#= f.time_select :duramins,:minute_step => 15 %></td>
 	</tr>
 </table>
 <H2>Training Plan Details</H2>
