--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -80,7 +80,7 @@
 		<tr>
 			<td class="leftcol"><label for="closed">Submit to</label></td>
 			<td><b>:</b></td>
-			<td><%= f.collection_select :cc1staff_id, Staff.find(:all, :include => [:title], :order => 'titles.id ASC', :conditions => {:id => [40, 78]})), :id, :staff_name_with_title, :prompt => 'Select Recipient'  %></td>
+			<td><%= f.collection_select :cc1staff_id, Staff.find(:all, :include => [:title], :order => 'titles.id ASC', :conditions => {:id => [40, 78]}), :id, :staff_name_with_title, :prompt => 'Select Recipient'  %></td>
 		</tr>
 		
 		<tr>
