--- a/app/views/counsellings/_form.html.erb
+++ b/app/views/counsellings/_form.html.erb
@@ -5,7 +5,7 @@
 	<tr>
 		<td class="leftcol"><label for="student_id">Student Name</label></td>
 		<td><b>:</b></td>
-		<td><%= f.collection_select :student_id, Student.find(:all), :id, :name %></td>
+		<td><%= f.collection_select :student_id, Student.find(:all, :order => "name"), :id, :name %></td>
 	</tr>
 	<tr>
 		<td class="leftcol"><label for="File No">File Name</label></td>
