--- a/app/views/sdiciplines/_form.html.erb
+++ b/app/views/sdiciplines/_form.html.erb
@@ -182,54 +182,44 @@
 	</table>
 	<% end %>
 	
-	<% if (@sdicipline.commandant_id == current_user.staff.position.id) && ((@sdicipline.status == "Refer to Komandan") || (@sdicipline.status == "Closed" && @sdicipline.closedtcollege.blank?)) %>	
+	<% if @sdicipline.commandant_id == current_user.try(:staff).try(:position).try(:id) %> 
+    <% if @sdicipline.status == "Refer to Komandan" || (@sdicipline.status == "Closed" && @sdicipline.closedtcollege.blank?) %>	
 	
-	<%= render :partial => 'show_mentorcounsellor_details' %>
+	      <%= render :partial => 'show_mentorcounsellor_details' %>
 	
-	<H2>Refer To Komandan</H2>
-	<table width=100%>
-	<!--	<tr>
-			<td class="leftcol"><label for="bplsenddt">Date Sent To BPL</label></td>
-			<td><b>:</b></td>
-			<td><#%= f.date_select :commandantdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
-		</tr>
+      	<H2>Refer To Komandan</H2>
+      	<table width=100%>
+      		<tr>
+      			<td width=23% colspan=2><label for="jtkpdecision">Commandant Decision</label></td>
+      			<td><b>:</b></td>
+      			<td><%= f.text_area :jtkpdecision, :size => "40x5" %></td>
+      		</tr>
 
-		<tr>
-			<td class="leftcol"><label for="jtkpdt">Date JTKP</label></td>
-			<td><b>:</b></td>
-			<td><#%= f.date_select :jtkpdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
-		</tr>-->
+      		<tr>
+      			<td class="leftcol" colspan=2><label for="jtkpdescisionrxdt">Date Commandant Decision</label></td>
+      			<td><b>:</b></td>
+      			<td><%= f.date_select :jtkpdescisionrxdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
+      		</tr>
 
-		<tr>
-			<td width=23% colspan=2><label for="jtkpdecision">Commandant Decision</label></td>
-			<td><b>:</b></td>
-			<td><%= f.text_area :jtkpdecision, :size => "40x5" %></td>
-		</tr>
+      		<tr>
+      			<td class="leftcol" colspan=2><label for="appealdt">Appeal Date</label></td>
+      			<td><b>:</b></td>
+      			<td><%= f.date_select :appealdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
+      		</tr>
 
-		<tr>
-			<td class="leftcol" colspan=2><label for="jtkpdescisionrxdt">Date Commandant Decision</label></td>
-			<td><b>:</b></td>
-			<td><%= f.date_select :jtkpdescisionrxdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
-		</tr>
+      		<tr>
+      			<td class="leftcol" colspan=2><label for="appealdecision">Appeal Decision</label></td>
+      			<td><b>:</b></td>
+      			<td><%= f.text_area :appealdecision, :size => "40x5" %></td>
+      		</tr>
 
-		<tr>
-			<td class="leftcol" colspan=2><label for="appealdt">Appeal Date</label></td>
-			<td><b>:</b></td>
-			<td><%= f.date_select :appealdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
-		</tr>
-
-		<tr>
-			<td class="leftcol" colspan=2><label for="appealdecision">Appeal Decision</label></td>
-			<td><b>:</b></td>
-			<td><%= f.text_area :appealdecision, :size => "40x5" %></td>
-		</tr>
-
-		<tr>
-			<td class="leftcol" colspan=2><label for="appealdecisionrxdt">Appeal Decision Date</label></td>
-			<td><b>:</b></td>
-			<td><%= f.date_select :appealdecisionrxdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
-		</tr>
-	</table>
+      		<tr>
+      			<td class="leftcol" colspan=2><label for="appealdecisionrxdt">Appeal Decision Date</label></td>
+      			<td><b>:</b></td>
+      			<td><%= f.date_select :appealdecisionrxdt, :start_year => 2010, :end_year => 2020, :order => [:day, :month, :year], :include_blank => true  %></td>
+      		</tr>
+      	</table>
+    <% end %>
 	<% end %>
 <%# if ((@sdicipline.status == "Refer to Mentor" && @sdicipline.mentor_id != "" && @sdicipline.mentor_id == current_user.staff_id) || (@sdicipline.status == "Refer to Counsellor" && @sdicipline.caunsellor_id != "" && @sdicipline.caunsellor_id == current_user.staff_id) || @sdicipline.status == "Refer to Komandan")  %> 	
 	<table width=100% border=0>	
