--- a/app/views/viewer/_notifications.html.erb
+++ b/app/views/viewer/_notifications.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.isstaff? %>
 <div id='notifications_nuovo'>
 	<h4>Notification Area</h4>
 	<p>
@@ -180,3 +181,5 @@
 </p>
 	
 </div>
+
+<% end %>
