--- a/app/views/ptbudgets/index.html.erb
+++ b/app/views/ptbudgets/index.html.erb
@@ -18,7 +18,7 @@
 
 <% @ptbudgets.each do |ptbudget| %>
   <tr>
-    <td><%=h ptbudget.fiscalstart.strftime("%d %b %Y") %></td>
+    <td><%=h ptbudget.fiscalstart.try(:strftime, "%d %b %Y") %></td>
     <td><%=h ringgols(ptbudget.budget) %></td>
 	<td>-</td>
 	<td>-</td>
