#104 Error on Library Transaction Index

--- a/app/views/librarytransactions/_form.html.erb
+++ b/app/views/librarytransactions/_form.html.erb
@@ -10,7 +10,7 @@
 		<td><%= f.check_box :returned %></td>
 	</tr>	
 	<tr>
-		<td class="leftcol" ><label for="extended"><#%= t 'librarytransaction.extended' %></label></td>
+		<td class="leftcol" ><label for="extended"><%= t 'librarytransaction.returned' %></label></td>
 		<td><b>:</b></td>
 		<td><%= f.check_box :returned %><font color="grey", size="-2"> Tick if the book is returned </font></td>
 	</tr>
