--- a/public/stylesheets/ICMS.css
+++ b/public/stylesheets/ICMS.css
@@ -766,6 +766,10 @@ font-family: sans-serif; font-size: 16px; font-weight: bold;
     border:1px solid #8ed9f6;
 }
 
+select#librarytransaction_book_id {
+     width: 70%;
+}
+
 
 
 
