--- a/app/views/viewer/_event.html.erb
+++ b/app/views/viewer/_event.html.erb
@@ -1,7 +1,8 @@
 <% if (request.request_uri == "/" || request.request_uri == "/home") %>
 	<H3><%= link_to "Events ", { :controller => "events", :action => "index" } %></H3>
 	<H3>Todays Events</H3>
-			<% todays_events = Event.find(:all, :conditions => ["eventstdt <= ? AND eventendt >= ? ", Time.now,  Time.now ], :order => 'eventendt desc', :limit => 6) %>
+			<% todays_events = Event.find(:all, :conditions => ["eventstdt <= ? AND eventendt >= ? ", Time.now.end_of_day, Time.now.end_of_day ], :order => 'eventendt desc', :limit => 6) %>
+
 			<% if todays_events == [] %>
 				<div class="sidebar_event_item0">
 				<H5>No Events Today</H5>
@@ -18,7 +19,7 @@
 			<% end %>
 			
 			<H3>Recent Events</H3>
-			<% dash_events = Event.find(:all, :conditions => ["eventendt < ? AND eventendt >= ? ", Time.now, 7.days.ago], :order => 'eventendt desc', :limit => 6) %>
+			<% dash_events = Event.find(:all, :conditions => ["eventendt < ? AND eventendt >= ? ", Time.now.beginning_of_day, 7.days.ago], :order => 'eventendt desc', :limit => 6) %>
 			<% if dash_events == [] %>
 				<div class="sidebar_event_item0">
 					<H5>No events since last week</H5>
@@ -35,7 +36,7 @@
 		  <% end %>
 		
 			<H3>Upcoming Events</H3>
-			<% future_events = Event.find(:all, :conditions => ["eventstdt > ? ", Time.now ], :order => 'eventstdt desc', :limit => 6) %>
+			<% future_events = Event.find(:all, :conditions => ["eventstdt > ? ", Time.now.end_of_day ], :order => 'eventstdt desc', :limit => 6) %>
 			<% if future_events == [] %>
 				<div class="sidebar_event_item0">
 					<H5>No future events</H5>
