--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,9 @@
   </div>
 		
   <div id='header'>
-	    <%= image_tag("bannerapmm1.jpg") %>  <!-- this line and replace similiar line in other app then copy the file marked in finder on top of me (dont copy directories!) --> 
-		
+      <div style="text-align:left;">
+	    <%= image_tag("bannerapmm.jpg") %>  <!-- this line and replace similiar line in other app then copy the file marked in finder on top of me (dont copy directories!) --> 
+		 </div>
 	
 			<% if logged_in? %>
 		
