--- a/app/views/viewer/_notifications.html.erb
+++ b/app/views/viewer/_notifications.html.erb
@@ -13,7 +13,7 @@
     
     <!-- Notification for Instructor Appraisal-->
     <% c = User.find(:all, :select => "id", :conditions => ['roles.id =?', 19], :include => :roles).map(&:id) %>
-    <% d = User.current_user.id.to_a %>
+    <% d =Array(User.current_user.id) %>
     <% dash_ip = Instructor.count(:all, :conditions => ["qcsent =?", true]) %>
 
 	<% if (d & c == c) && dash_ip > 0 %>
@@ -23,7 +23,7 @@
   	
     <!-- Notification for Travel Request -->
   	<% c = Position.find(:all, :select => "positionname", :conditions => ['positions.id =?', 51]).map(&:positionname) %>
-  	<% d = User.current_user.id.to_a %>
+  	<% d = Array(User.current_user.id) %>
   	<% dash_lfs = Travelrequest.count(:all, :conditions => ["hod_id =? AND hod_approved IS ?", 51, nil]) %>
 
   	<% if (d & c == c) && dash_lfs > 0 %>
@@ -94,7 +94,7 @@
 
   	<!-- Notification for Student Leave Approval -->
   	<% c = User.find(:all, :select => "id", :conditions => ['roles.id =?', 21], :include => :roles).map(&:id) %>
-  	<% d = User.current_user.id.to_a %>
+  	<% d = Array(User.current_user.id) %>
   	<% dash_lfs = Leaveforstudent.count(:all, :conditions => ["studentsubmit =? AND approved IS ?", true, nil]) %>
   
   	<% if (d & c == c) && dash_lfs > 0 %>
@@ -162,7 +162,7 @@
 	
 	<!-- Notification for Question Bank -->
   	<% c = User.find(:all, :select => "id", :conditions => ['roles.id =?', 19], :include => :roles).map(&:id) %>
-  	<% d = User.current_user.id.to_a %>
+  	<% d = Array(User.current_user.id) %>
   	<% dash_qb = Examquestion.count(:all, :conditions => ["bplsent =? AND approver_id IS ?", true, nil]) %>
  
 	<% if (d & c == c) && dash_qb > 0 %>
